--- a/style.css
+++ b/style.css
@@ -27,10 +27,791 @@ p {
   padding-top: 120px;
   padding-bottom: 120px;
 }
-
+.block__top {
+  margin-bottom: 10px;
+  text-align: center;
+}
+.block__title {
+  margin-bottom: 20px;
+  font-size: 39px;
+  line-height: 58px;
+  font-weight: 600;
+}
+.block__subtitle {
+  font-size: 25px;
+  line-height: 38px;
+  font-weight: 600;
+  color: #373737;
+}
 .light-background {
   background-color: #fff7f4;
 }
+.block__third_title {
+  font-size: 20px;
+  line-height: 30px;
+  font-weight: 500;
+}
+.block__help-txt {
+  position: relative;
+  display: inline-block;
+  margin-bottom: 15px;
+  font-size: 16px;
+  line-height: 24px;
+  color: #F35500;
+}
+.block__help-txt--left:before {
+  display: none;
+}
+.block__help-txt:after, .block__help-txt:before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  width: 40px;
+  height: 1px;
+  background-color: #F35500;
+}
+.block__help-txt:after {
+  right: -49px;
+}
+.block__help-txt:before {
+  left: -49px;
+}
+.block__input {
+  height: 100%;
+  padding: 20px;
+  border: none;
+  font-size: 16px;
+  line-height: 24px;
+  color: #373737;
+}
+.block__input::placeholder {
+  font-size: 16px;
+  line-height: 24px;
+  color: #7B7B7B;
+}
+.block__input:focus {
+  outline: none;
+}
+.block__btn {
+  padding: 18px 34px;
+  font-size: 20px;
+  line-height: 24px;
+  color: #fff;
+  background-color: #F35500;
+  border: none;
+  border-radius: 5px;
+  text-decoration: none;
+}
+
+.block__bradcrumb {
+  font-size: 16px;
+  line-height: 24px;
+  color: #373737;
+}
+
+.block__bradcrumb__link {
+  color: #373737;
+  text-decoration: none;
+}
+
+.block__pagination {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin-top: 60px;
+}
+
+.block__pagination__it {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  width: 50px;
+  height: 50px;
+  margin: 0 9px;
+  margin-bottom: 18px;
+  font-family: "Work Sans", sans-serif;
+  font-size: 20px;
+  line-height: 24px;
+  font-weight: 500;
+  color: #F35500;
+  border: 1px solid #F35500;
+  text-decoration: none;
+}
+
+.block__pagination__it--active {
+  color: #fff;
+  background-color: #F35500;
+}
+
+.header {
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+.header__content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.light-background {
+  background-color: #FFF7F4;
+}
+
+.nav__item {
+  margin: 0 15px;
+  color: #373737;
+  text-decoration: none;
+}
+.nav__item:last-child {
+  padding: 10px 16px;
+  border-radius: 6px;
+  border: 1px solid #373737;
+}
+
+.block--main {
+  padding-bottom: 150px;
+}
+.block--main__left {
+  width: 55%;
+}
+.block--main__right {
+  display: inline-block;
+  width: 45%;
+}
+.block--main__img {
+  max-width: 100%;
+  width: 100%;
+}
+.block--main__link {
+  display: inline-block;
+  padding: 10px 22px;
+  color: #fff;
+  border-radius: 5px;
+  background-color: #F35500;
+  text-decoration: none;
+}
+.block--main__title {
+  margin-bottom: 18px;
+  font-size: 48px;
+  line-height: 72px;
+  font-weight: 700;
+  color: #373737;
+}
+.block--main__list {
+  font-size: 20px;
+}
+
+.block--main__content {
+  margin-bottom: 30px;
+}
+
+.block--main__cols {
+  display: flex;
+  align-items: center;
+}
+
+.block--wwd__cols {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.block--wwd__items {
+  width: 33.33%;
+  padding: 15px;
+}
+
+.block--wwd__content {
+  position: relative;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.1);
+}
+
+.block--wwd__items .block--wwd__content:before {
+  width: 83px;
+  height: 74px;
+  position: absolute;
+  top: 30px;
+  right: 20px;
+  font-size: 64px;
+  line-height: 73px;
+  font-weight: 600;
+  color: #EFEFEF;
+  text-align: right;
+}
+
+.block--wwd__items:first-child .block--wwd__content:before {
+  content: "01";
+}
+
+.block--wwd__items:nth-child(2) .block--wwd__content:before {
+  content: "02";
+}
+
+.block--wwd__items:nth-child(3) .block--wwd__content:before {
+  content: "03";
+}
+
+.block--wwd__items:nth-child(4) .block--wwd__content:before {
+  content: "04";
+}
+
+.block--wwd__items:nth-child(5) .block--wwd__content:before {
+  content: "05";
+}
+
+.block--wwd__items:nth-child(6) .block--wwd__content:before {
+  content: "06";
+}
+
+.block--wwd__items__type {
+  font-size: 12px;
+  line-height: 19px;
+  font-weight: 300;
+}
+
+.block--wwd__picture {
+  display: inline-block;
+  width: 80px;
+  height: 80px;
+}
+
+.block--wwd__img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+.block--about__content {
+  display: flex;
+  align-items: center;
+}
+
+.block--about__left, .block--about__right {
+  width: 50%;
+}
+
+.block--about__list {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.block--about__li {
+  position: relative;
+  padding-left: 37px;
+  margin-bottom: 15px;
+  color: #373737;
+}
+
+.block--about__li:before {
+  content: url("data:image/svg+xml,%0A%3Csvg width='24' height='24' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M12 22C6.477 22 2 17.523 2 12C2 6.477 6.477 2 12 2C17.523 2 22 6.477 22 12C22 17.523 17.523 22 12 22ZM11.003 16L18.073 8.929L16.659 7.515L11.003 13.172L8.174 10.343L6.76 11.757L11.003 16Z' fill='%23FF5300'/%3E%3C/svg%3E%0A");
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 24px;
+  height: 24px;
+}
+
+.block--about__text {
+  margin-bottom: 20px;
+}
+
+.block--about__picture {
+  display: block;
+  padding-left: 20px;
+}
+
+.block--about__img {
+  width: 100%;
+}
+
+.block--cs__list {
+  padding: 0;
+  margin: 0;
+  margin-bottom: 30px;
+  list-style: none;
+  display: flex;
+  overflow-x: auto;
+  width: auto;
+  padding-bottom: 14px;
+}
+
+.block--cs__link {
+  display: inline-block;
+  min-width: 110px;
+  padding: 15px 38px;
+  color: #7B7B7B;
+  text-decoration: none;
+  text-align: center;
+  white-space: nowrap;
+}
+
+.block--cs__li--active .block--cs__link,
+.block--cs__link:hover {
+  color: #fff;
+  border-radius: 10px;
+  background-color: #F35500;
+}
+
+.block--cs__boxes {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.block--cs__box-item {
+  position: relative;
+  width: 33.33%;
+}
+
+.block--cs__hover {
+  display: none;
+  position: absolute;
+  top: 42px;
+  bottom: 42px;
+  left: 62px;
+  right: 62px;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  padding: 15px;
+  text-align: center;
+  background-color: rgba(255, 83, 0, 0.75);
+}
+
+.block--cs__box-item:hover .block--cs__hover {
+  display: flex;
+}
+
+.block--cs__hover__title {
+  margin-top: 15px;
+  font-size: 25px;
+  line-height: 38px;
+  font-weight: 600;
+  color: #fff;
+}
+
+.block--cs__picture {
+  display: flex;
+  height: 100%;
+}
+
+.block--cs__img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.block--testimonials__rating {
+  margin-bottom: 10px;
+}
+
+.swiper-testimonial__person {
+  position: relative;
+  margin-top: 25px;
+  display: flex;
+  align-items: center;
+}
+
+.swiper-testimonial__person:before {
+  content: url("data:image/svg+xml,%3Csvg width='60' height='60' viewBox='0 0 60 60' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M48.5425 16.6974C51.1175 19.4324 52.5 22.4999 52.5 27.4724C52.5 36.2224 46.3575 44.0649 37.425 47.9424L35.1925 44.4974C43.53 39.9874 45.16 34.1349 45.81 30.4449C44.4675 31.1399 42.71 31.3824 40.9875 31.2224C36.4775 30.8049 32.9225 27.1024 32.9225 22.4999C32.9225 20.1792 33.8444 17.9536 35.4853 16.3127C37.1263 14.6717 39.3519 13.7499 41.6725 13.7499C44.355 13.7499 46.92 14.9749 48.5425 16.6974ZM23.5425 16.6974C26.1175 19.4324 27.5 22.4999 27.5 27.4724C27.5 36.2224 21.3575 44.0649 12.425 47.9424L10.1925 44.4974C18.53 39.9874 20.16 34.1349 20.81 30.4449C19.4675 31.1399 17.71 31.3824 15.9875 31.2224C11.4775 30.8049 7.9225 27.1024 7.9225 22.4999C7.9225 20.1792 8.84437 17.9536 10.4853 16.3127C12.1263 14.6717 14.3519 13.7499 16.6725 13.7499C19.355 13.7499 21.92 14.9749 23.5425 16.6974Z' fill='%23BCC1C7'/%3E%3C/svg%3E%0A");
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 60px;
+  height: 60px;
+  z-index: -1;
+  opacity: 0.5;
+}
+
+.swiper-testimonial__name {
+  color: #F35500;
+}
+
+.swiper-testimonial__position {
+  font-size: 13px;
+  line-height: 19px;
+  font-weight: 300;
+  color: #7B7B7B;
+}
+
+.swiper-testimonial__picture {
+  width: 60px;
+  height: 60px;
+  margin-right: 15px;
+}
+
+.swiper-testimonial__img {
+  width: 100%;
+  height: 100%;
+  border-radius: 100%;
+  object-fit: cover;
+}
+
+.block--testimonials__slide {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: auto;
+  padding: 25px;
+  background-color: #fff;
+  box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+}
+
+.block--testimonials__top {
+  margin-bottom: 40px;
+}
+
+.swiper-button-prev:after, .swiper-rtl .swiper-button-next:after {
+  content: url("data:image/svg+xml,%3Csvg width='50' height='50' viewBox='0 0 50 50' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Ccircle cx='25' cy='25' r='24.5' transform='rotate(-180 25 25)' stroke='%23FF5300'/%3E%3Cpath d='M23.5349 25.0001L29.7224 31.1876L27.9549 32.9551L19.9999 25.0001L27.9549 17.0451L29.7224 18.8126L23.5349 25.0001Z' fill='%23FF5300'/%3E%3C/svg%3E%0A");
+}
+
+.swiper-button-next:after, .swiper-rtl .swiper-button-prev:after {
+  content: url("data:image/svg+xml,%3Csvg width='50' height='50' viewBox='0 0 50 50' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Ccircle cx='25' cy='25' r='24.5' stroke='%23FF5300'/%3E%3Cpath d='M26.4651 24.9999L20.2776 18.8124L22.0451 17.0449L30.0001 24.9999L22.0451 32.9549L20.2776 31.1874L26.4651 24.9999Z' fill='%23FF5300'/%3E%3C/svg%3E%0A");
+}
+
+.swiper-button-next.swiper-button-disabled, .swiper-button-prev.swiper-button-disabled {
+  opacity: 1;
+}
+
+.swiper-button-next.swiper-button-disabled::after {
+  content: url("data:image/svg+xml,%3Csvg width='50' height='50' viewBox='0 0 50 50' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Ccircle cx='25' cy='25' r='24.5' stroke='%23373737'/%3E%3Cpath d='M26.4651 24.9999L20.2776 18.8124L22.0451 17.0449L30.0001 24.9999L22.0451 32.9549L20.2776 31.1874L26.4651 24.9999Z' fill='%23373737'/%3E%3C/svg%3E%0A");
+}
+
+.swiper-button-prev.swiper-button-disabled::after {
+  content: url("data:image/svg+xml,%3Csvg width='50' height='50' viewBox='0 0 50 50' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Ccircle cx='25' cy='25' r='24.5' transform='rotate(-180 25 25)' stroke='%23373737'/%3E%3Cpath d='M23.5349 25.0001L29.7224 31.1876L27.9549 32.9551L19.9999 25.0001L27.9549 17.0451L29.7224 18.8126L23.5349 25.0001Z' fill='%23373737'/%3E%3C/svg%3E%0A");
+}
+
+.block--testimonials__swiper {
+  position: relative;
+}
+
+.swiper-button-next {
+  right: -64px;
+}
+
+.swiper-button-prev {
+  left: -64px;
+}
+
+.block--capabilities__left {
+  width: 55%;
+}
+
+.block--capabilities__subtile {
+  margin-bottom: 5px;
+  color: #F35500;
+}
+
+.block--capabilities__desc {
+  font-size: 13px;
+  line-height: 19px;
+  font-weight: 300;
+  color: #373737;
+}
+
+.block--capabilities__li {
+  width: 25%;
+  padding: 0 12px;
+}
+
+.block--capabilities__item {
+  height: 100%;
+  padding: 15px;
+  box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.1);
+  border-radius: 5px;
+  text-align: center;
+}
+
+.block--capabilities__ul {
+  display: flex;
+  flex-wrap: wrap;
+  list-style: none;
+  padding: 0;
+  margin: 0 -12px;
+  margin-top: 40px;
+}
+
+.block--capabilities--content {
+  display: flex;
+  align-items: center;
+}
+
+.block--capabilities__picture {
+  display: inline-block;
+  width: 45%;
+  padding-left: 10px;
+}
+
+.block--capabilities__img {
+  width: 100%;
+}
+
+.block--ci {
+  margin: 0 15px;
+}
+
+.block--ci__content {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  padding: 70px 0;
+  border-radius: 10px;
+  background-color: #F35500;
+}
+
+.block--ci__item {
+  position: relative;
+  width: 25%;
+  text-align: center;
+  color: #fff;
+}
+
+.block--ci__item:not(:last-child):before {
+  content: "";
+  height: 100%;
+  width: 3px;
+  position: absolute;
+  top: 0;
+  right: 0;
+  border-radius: 4px;
+  background-color: #fff;
+}
+
+.block--ci__title {
+  margin-bottom: 0;
+  margin-top: 4px;
+}
+
+.block--blog__top {
+  margin-bottom: 60px;
+}
+
+.block--blog__items {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin: 0 -15px;
+}
+
+.block--blog__item {
+  width: 33.33%;
+  padding: 0 15px;
+}
+
+.block--ci__picture {
+  display: inline-block;
+  height: 50px;
+}
+
+.block--ci__icon {
+  height: 100%;
+  object-fit: contain;
+}
+
+.block--blog__link {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  padding: 15px;
+  height: 100%;
+  color: #373737;
+  text-decoration: none;
+  border-radius: 10px;
+  box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.1);
+}
+
+.block--blog__details {
+  margin-bottom: 18px;
+  font-family: "Work Sans", sans-serif;
+  font-size: 10px;
+  line-height: 19px;
+}
+
+.block--blog__detail {
+  display: inline-flex;
+  align-items: center;
+  margin-right: 10px;
+}
+
+.block-blog__icon {
+  margin-right: 5px;
+}
+
+.block--blog__btn {
+  width: fit-content;
+  display: inline-block;
+  margin-top: 25px;
+  margin-bottom: 15px;
+  padding: 12px 22px;
+  font-family: "Work Sans", sans-serif;
+  font-size: 20px;
+  line-height: 24px;
+  color: #fff;
+  border-radius: 5px;
+  background-color: #F35500;
+  filter: drop-shadow(4px 5px 15px rgba(255, 83, 0, 0.1));
+}
+
+.block--blog__picture {
+  display: inline-block;
+  height: 225px;
+  width: 100%;
+}
+
+.block--blog__img {
+  width: 100%;
+  margin-bottom: 15px;
+  border-radius: 10px;
+  height: 100%;
+  object-fit: cover;
+}
+
+.block--blog__third-title {
+  margin-bottom: 15px;
+}
+
+.block--newsletter__content {
+  padding: 50px 40px;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  color: #fff;
+  background-color: #F35500;
+  box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+}
+
+.block--newsletter__left {
+  width: 40%;
+}
+
+.block--newsletter__right {
+  width: 60%;
+}
+
+.block--newsletter--help {
+  color: #fff;
+}
+
+.block--newsletter--help:after {
+  background-color: #fff;
+}
+
+.block--newsletter__form {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  padding: 5px;
+  background-color: #fff;
+  border-radius: 5px;
+}
+
+.block--footer {
+  padding-bottom: 0;
+  padding-top: 66px;
+  color: #fff;
+  background-image: url("../img/footer-bg.jpg");
+}
+
+.block--footer__about {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  padding-bottom: 66px;
+  margin: 0 -15px;
+}
+
+.block--footer__txt {
+  color: #fff;
+}
+
+.block--footer__ttl {
+  margin-bottom: 20px;
+  color: #F35500;
+}
+
+.block--footer__link {
+  text-decoration: none;
+  color: #fff;
+}
+
+.block--footer__aitem {
+  width: 40%;
+  padding: 0 15px;
+}
+
+.block--footer__bitem {
+  min-width: 16%;
+  padding: 0 15px;
+}
+
+.block--footer__citem {
+  min-width: 28%;
+  padding: 0 15px;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.block--footer__social {
+  width: 50px;
+  height: 50px;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 10px;
+  background-color: #fff;
+  border-radius: 100%;
+}
+
+.block--footer__social:not(:last-child) {
+  margin-right: 20px;
+}
+
+.block--footer__copyright {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 20px 0;
+  border-top: 1px solid #fff;
+}
+
+.block--footer__cr-text {
+  position: relative;
+  padding-left: 42px;
+  font-family: "Work Sans", sans-serif;
+  font-size: 16px;
+  margin-right: 70px;
+}
+
+.block--footer__cr-text:before {
+  content: url("data:image/svg+xml,%3Csvg width='24' height='24' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M12 2C17.52 2 22 6.48 22 12C22 17.52 17.52 22 12 22C6.48 22 2 17.52 2 12C2 6.48 6.48 2 12 2ZM12 4C7.58 4 4 7.58 4 12C4 16.42 7.58 20 12 20C16.42 20 20 16.42 20 12C20 7.58 16.42 4 12 4ZM12 7C13.82 7 15.413 7.973 16.288 9.428L14.574 10.457C14.3043 10.0072 13.9213 9.63605 13.4634 9.38045C13.0055 9.12484 12.4885 8.99374 11.9641 9.00023C11.4397 9.00672 10.9262 9.15056 10.4747 9.41742C10.0232 9.68428 9.6496 10.0648 9.39107 10.5211C9.13254 10.9774 8.99815 11.4935 9.00128 12.0179C9.00442 12.5424 9.14498 13.0568 9.40895 13.51C9.67292 13.9632 10.0511 14.3392 10.5057 14.6007C10.9603 14.8621 11.4756 14.9998 12 15C12.5181 15.0003 13.0275 14.8664 13.4785 14.6112C13.9294 14.356 14.3065 13.9883 14.573 13.544L16.288 14.572C15.726 15.5106 14.8716 16.239 13.8559 16.6453C12.8402 17.0517 11.7192 17.1137 10.6649 16.8217C9.61058 16.5298 8.68114 15.9 8.01914 15.029C7.35713 14.1581 6.99912 13.094 7 12C7 9.24 9.24 7 12 7Z' fill='white'/%3E%3C/svg%3E%0A");
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 24px;
+  height: 24px;
+}
+
+.block--footer__copylink {
+  position: relative;
+  padding-left: 28px;
+  margin-left: 30px;
+  color: #fff;
+  text-decoration: none;
+}
+
+.block--footer__copylink:before {
+  content: "";
+  width: 18px;
+  height: 18px;
+  position: absolute;
+  top: 2px;
+  left: 0;
+  border-radius: 100%;
+  background-color: #F35500;
+}
+/*-------------------------------------*/
 .container {
   max-width: 1178px;
   margin: 0 auto;
